cmake_minimum_required(VERSION 2.8)
project(jpeg)
file(GLOB jpeg_HEADERS *.h)
file(GLOB jpeg_SOURCES *.c)
add_library(jpeg STATIC ${jpeg_SOURCES} ${jpeg_HEADERS})
install(TARGETS jpeg EXPORT jpeg-exports DESTINATION lib)
install(FILES ${jpeg_HEADERS} DESTINATION include)
install(FILES jpeg-config.cmake DESTINATION share/jpeg)
install(EXPORT jpeg-exports DESTINATION share/jpeg)
